sentinelforge/configs/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: sentinelforge
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/api/identity/"
                          route:
                            cluster: identity_svc
                            prefix_rewrite: "/api/identity/"
                        - match:
                            prefix: "/auth/"
                          route:
                            cluster: keycloak
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/grafana/"
                          route:
                            cluster: grafana
                        - match:
                            prefix: "/"
                          route:
                            cluster: identity_svc
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: listener_https
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /certs/server.pem
                    private_key:
                      filename: /certs/server-key.pem
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_https
                route_config:
                  name: local_route_https
                  virtual_hosts:
                    - name: sentinelforge_https
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/api/identity/"
                          route:
                            cluster: identity_svc
                        - match:
                            prefix: "/auth/"
                          route:
                            cluster: keycloak
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/grafana/"
                          route:
                            cluster: grafana
                        - match:
                            prefix: "/"
                          route:
                            cluster: identity_svc
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: identity_svc
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: identity_svc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: identity-svc
                      port_value: 8000

    - name: keycloak
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: keycloak
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: keycloak
                      port_value: 8080

    - name: grafana
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: grafana
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: grafana
                      port_value: 3000
